# libField

./: .aspell.en.pws  .aspell.en.pws.txt  .gitignore  CMakeLists.txt  LICENSE.md  README.md  README.md.t  conanfile.py  conanfile.txt  justfile
applications/: Example-cli.cpp
cmake/Modules/: macro-git_version.cmake
doc/: CMakeLists.txt  Makefile  README.md.t
doc/examples/usage/: CMakeLists.txt  demo-dynamicArray.cpp  demo-dynamicArray2.cpp  demo-libField.cpp  demo-staticArray.cpp
doc/figures/: gaussian-temp.tex
doc/figures/project-deps/: Makefile  dep-graph.txt
doc/reference/html/: Aliases_8hpp.html  Aliases_8hpp_source.html  CoordinateSystem_8hpp.html  CoordinateSystem_8hpp_source.html  Field_8hpp_source.html  HDF5_8hpp_source.html  RangeDiscretizers_8hpp.html  RangeDiscretizers_8hpp_source.html  Serialization_8hpp.html  Serialization_8hpp_source.html  Utils_8hpp.html  Utils_8hpp_source.html  annotated.html  classCoordinateSystem-members.html  classCoordinateSystem.html  classField-members.html  classField.html  classes.html  classrange__discretizers_1_1GeometricImp-members.html  classrange__discretizers_1_1GeometricImp.html  classrange__discretizers_1_1GeometricWithPeriodImp-members.html  classrange__discretizers_1_1GeometricWithPeriodImp.html  classrange__discretizers_1_1UniformImp-members.html  classrange__discretizers_1_1UniformImp.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_85e9413b4365ddfbccced2ba51089c7b.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  libField_2Field_8hpp.html  libField_2Field_8hpp_source.html  md_src_libField_README.html  menudata.js  pages.html  structIsCallable-members.html  structIsCallable.html  structIsIndexCont.html  structIsIndexCont_3_01T_0fN_0e_4.html  (+6 more)
doc/reference/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js
scripts/util/: build-and-check-docs.sh  check-spelling.sh
src/: Aliases.hpp  CoordinateSystem.hpp  Example.cpp  Field.hpp  RangeDiscretizers.hpp  Serialization.hpp  Utils.hpp
src/libField/: Aliases.hpp  CoordinateSystem.hpp  Field.hpp  HDF5.hpp  IO.hpp  RangeDiscretizers.hpp  Serialization.hpp  Utils.hpp
testing/: CMakeLists.txt  pre-tag-release.sh
testing/CatchTests/: ASCIIIOTests.cpp  ArrayOfObjectsVsObjectOfArrays.cpp  BinaryIOTests.cpp  BoostMultiArrayExamples.cpp  BoostMultiArrayExamples.hpp  BoostUnitsIntegration.cpp  Bugs.cpp  CoordinateSystemTests.cpp  Demos.cpp  FieldTests.cpp  HDF5IOTests.cpp  IntegrateTests.cpp  QFieldTests.cpp  RangeDiscretizers.cpp  SerializationTests.cpp  UnitTestTemplate.cpp  Utils.h  main.cpp
testing/NoniusBenchmarks/: main.cpp
testing/NoniusBenchmarks/Experiments/: FieldOptimization.cpp
testing/client_project/: example.cpp
testing/conan_package/test_package/: CMakeLists.txt  conanfile.py
testing/include/: catch.hpp  fakeit.hpp
testing/include/nonius/detail/: cpptempl.h
testing/scripts/: test-install.sh
util-scripts/: build-and-test.sh  generate-spell-dict.sh
